airflow/logs/dag_id=btcusdt_data_ingestion/run_id=manual__2024-10-15T22:22:42.420774+00:00/task_id=ingest_btcusdt/% if ti.map_index >= 0 %map_index=-1/% endif %attempt=1.log
[2024-10-15T22:22:47.172+0000] {taskinstance.py:1037} DEBUG - previous_execution_date was called
[2024-10-15T22:22:47.188+0000] {__init__.py:51} DEBUG - Loading core task runner: StandardTaskRunner
[2024-10-15T22:22:47.203+0000] {taskinstance.py:1037} DEBUG - previous_execution_date was called
[2024-10-15T22:22:47.207+0000] {base_task_runner.py:68} DEBUG - Planning to run as the  user
[2024-10-15T22:22:47.209+0000] {taskinstance.py:789} DEBUG - Refreshing TaskInstance <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:22:42.420774+00:00 [queued]> from DB
[2024-10-15T22:22:47.231+0000] {taskinstance.py:1112} DEBUG - <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:22:42.420774+00:00 [queued]> dependency 'Task Instance Not Running' PASSED: True, Task is not in running state.
[2024-10-15T22:22:47.231+0000] {taskinstance.py:1112} DEBUG - <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:22:42.420774+00:00 [queued]> dependency 'Not In Retry Period' PASSED: True, The task instance was not marked for retrying.
[2024-10-15T22:22:47.232+0000] {taskinstance.py:1112} DEBUG - <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:22:42.420774+00:00 [queued]> dependency 'Task Instance State' PASSED: True, Task state queued was valid.
[2024-10-15T22:22:47.232+0000] {taskinstance.py:1112} DEBUG - <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:22:42.420774+00:00 [queued]> dependency 'Previous Dagrun State' PASSED: True, The task did not have depends_on_past set.
[2024-10-15T22:22:47.241+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:22:42.420774+00:00 [queued]>
[2024-10-15T22:22:47.241+0000] {taskinstance.py:1112} DEBUG - <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:22:42.420774+00:00 [queued]> dependency 'Not In Retry Period' PASSED: True, The task instance was not marked for retrying.
[2024-10-15T22:22:47.242+0000] {taskinstance.py:1112} DEBUG - <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:22:42.420774+00:00 [queued]> dependency 'Previous Dagrun State' PASSED: True, The task did not have depends_on_past set.
[2024-10-15T22:22:47.242+0000] {taskinstance.py:1112} DEBUG - <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:22:42.420774+00:00 [queued]> dependency 'Task Concurrency' PASSED: True, Task concurrency is not set.
[2024-10-15T22:22:47.252+0000] {taskinstance.py:1112} DEBUG - <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:22:42.420774+00:00 [queued]> dependency 'Pool Slots Available' PASSED: True, There are enough open slots in default_pool to execute the task
[2024-10-15T22:22:47.252+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:22:42.420774+00:00 [queued]>
[2024-10-15T22:22:47.253+0000] {taskinstance.py:1308} INFO - Starting attempt 1 of 2
[2024-10-15T22:22:47.268+0000] {taskinstance.py:1327} INFO - Executing <Task(PythonOperator): ingest_btcusdt> on 2024-10-15 22:22:42.420774+00:00
[2024-10-15T22:22:47.272+0000] {standard_task_runner.py:57} INFO - Started process 92 to run task
[2024-10-15T22:22:47.277+0000] {standard_task_runner.py:84} INFO - Running: ['airflow', 'tasks', 'run', 'btcusdt_data_ingestion', 'ingest_btcusdt', 'manual__2024-10-15T22:22:42.420774+00:00', '--job-id', '4', '--raw', '--subdir', 'DAGS_FOLDER/ingest_btcusdt_data.py', '--cfg-path', '/tmp/tmp888kwzax']
[2024-10-15T22:22:47.280+0000] {standard_task_runner.py:85} INFO - Job 4: Subtask ingest_btcusdt
[2024-10-15T22:22:47.281+0000] {cli_action_loggers.py:65} DEBUG - Calling callbacks: [<function default_action_log at 0x7fd2bbbf7550>]
[2024-10-15T22:22:47.341+0000] {taskinstance.py:1037} DEBUG - previous_execution_date was called
[2024-10-15T22:22:47.345+0000] {task_command.py:410} INFO - Running <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:22:42.420774+00:00 [running]> on host d867809303f2
[2024-10-15T22:22:47.346+0000] {settings.py:353} DEBUG - Disposing DB connection pool (PID 92)
[2024-10-15T22:22:47.346+0000] {settings.py:212} DEBUG - Setting up DB connection pool (PID 92)
[2024-10-15T22:22:47.347+0000] {settings.py:285} DEBUG - settings.prepare_engine_args(): Using NullPool
[2024-10-15T22:22:47.349+0000] {taskinstance.py:789} DEBUG - Refreshing TaskInstance <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:22:42.420774+00:00 [running]> from DB
[2024-10-15T22:22:47.392+0000] {taskinstance.py:1037} DEBUG - previous_execution_date was called
[2024-10-15T22:22:47.394+0000] {taskinstance.py:868} DEBUG - Clearing XCom data
[2024-10-15T22:22:47.428+0000] {retries.py:80} DEBUG - Running RenderedTaskInstanceFields._do_delete_old_records with retries. Try 1 of 3
[2024-10-15T22:22:47.444+0000] {taskinstance.py:1545} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='airflow' AIRFLOW_CTX_DAG_ID='btcusdt_data_ingestion' AIRFLOW_CTX_TASK_ID='ingest_btcusdt' AIRFLOW_CTX_EXECUTION_DATE='2024-10-15T22:22:42.420774+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-10-15T22:22:42.420774+00:00'
[2024-10-15T22:22:47.444+0000] {__init__.py:117} DEBUG - Preparing lineage inlets and outlets
[2024-10-15T22:22:47.445+0000] {__init__.py:155} DEBUG - inlets: [], outlets: []
[2024-10-15T22:22:47.453+0000] {base.py:73} INFO - Using connection ID 'company_dw' for task execution.
[2024-10-15T22:22:47.491+0000] {taskinstance.py:1824} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.9/site-packages/airflow/operators/python.py", line 181, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.9/site-packages/airflow/operators/python.py", line 198, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/ingest_btcusdt_data.py", line 56, in ingest_csv_to_postgres
    cursor.execute(create_table_query)
psycopg2.errors.SyntaxError: syntax error at or near "TEXT"
LINE 3:         Open Time TEXT, Open TEXT, High TEXT, Low TEXT, Clos...
                          ^

[2024-10-15T22:22:47.493+0000] {taskinstance.py:789} DEBUG - Refreshing TaskInstance <TaskInstance: btcusdt_data_ingestion.ingest_btcusdt manual__2024-10-15T22:22:42.420774+00:00 [running]> from DB
[2024-10-15T22:22:47.506+0000] {taskinstance.py:2305} DEBUG - Task Duration set to 0.264347
[2024-10-15T22:22:47.507+0000] {taskinstance.py:1356} DEBUG - Clearing next_method and next_kwargs.
[2024-10-15T22:22:47.507+0000] {taskinstance.py:1345} INFO - Marking task as UP_FOR_RETRY. dag_id=btcusdt_data_ingestion, task_id=ingest_btcusdt, execution_date=20241015T222242, start_date=20241015T222247, end_date=20241015T222247
[2024-10-15T22:22:47.524+0000] {cli_action_loggers.py:83} DEBUG - Calling callbacks: []
[2024-10-15T22:22:47.524+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 4 for task ingest_btcusdt (syntax error at or near "TEXT"
LINE 3:         Open Time TEXT, Open TEXT, High TEXT, Low TEXT, Clos...
                          ^
; 92)
[2024-10-15T22:22:47.538+0000] {local_task_job_runner.py:225} INFO - Task exited with return code 1
[2024-10-15T22:22:47.562+0000] {dagrun.py:697} DEBUG - number of tis tasks for <DagRun btcusdt_data_ingestion @ 2024-10-15 22:22:42.420774+00:00: manual__2024-10-15T22:22:42.420774+00:00, state:running, queued_at: 2024-10-15 22:22:42.445085+00:00. externally triggered: True>: 0 task(s)
[2024-10-15T22:22:47.562+0000] {taskinstance.py:2651} INFO - 0 downstream tasks scheduled from follow-on schedule check
